...
    <string name="redo">Redo</string>
    <string name="undo">Undo</string>

    <string name="new_option">new…</string>
    <string name="edit_option">edit…</string>

    <string name="confirm">Confirm</string>
    <string name="ignore">Ignore</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="help">Help</string>

    <string name="discard">Discard</string>

    <string name="next">Next</string>

    <string name="ok">OK</string>
    <string name="done">Done</string>
    <string name="close">Close</string>

    <string name= "assistant">Assistant</string>

    <string name="yes">Yes</string>
...
    <string name="rename">Rename</string>
    <string name="merge">Merge</string>
    <string name="show_details">Show details</string>
    <string name="hide_details">Hide details</string>
    <string name="project_options">Project options</string>
    <string name="from_library">Add from library</string>
    <string name="from_local">Add from local</string>
    <string name="sort_projects">Sort</string>
    <string name="unsort_projects">Unsort</string>


    <!-- New Dialog Titles -->
    <string name="new_scene_dialog">New scene</string>
...
    <string name="new_scene">New scene</string>

    <!-- Import Local Sprite -->
    <string name= "import_from_project">Select project to import from</string>
    <string name="import_from_scene">Select scene to import from</string>
    <string name="import_object">Select object to import</string>
    <string name="import_sprite_dialog_title">Import Actors and Objects</string>
    <string name="import_local_scene_successful">Local scene was added successfully</string>

    <!-- Action Toasts -->
    <!-- Backpack -->
    <string name="backpack_empty">Backpack empty. Nothing to unpack.</string>
    <plurals name="packed_scenes">
...
    <string name="particle_effects_additive_on">on</string>
    <string name="particle_effects_additive_off">off</string>
    <string name="set_particle_color_to">Set particle color to</string>

    <string name="undo_sort">Undo sort</string>
    <string name="sort">Sort</string>
    <string name="checkbox">checkbox</string>
   </resources>

